<resources>
    <string name="app_name">Moly</string>
    <string name="title_home">Home</string>
    <string name="title_detail">Detail</string>
    <string name="title_view_all">View All</string>
    <string name="image_movie">Image Movie</string>
    <string name="img_switch">Image Switch</string>
    <string name="about_me">About Me</string>
    <string name="genres_by_movies">Genres By Movies</string>
    <string name="genre_id">genreId</string>
    <string name="movie_id">movieId</string>
    <string name="back">back</string>
    <string name="retry">Retry</string>
    <string name="cast">Cast</string>
    <string name="overview">Overview</string>
    <string name="trailers">Trailers</string>
    <string name="images">Images</string>
    <string name="reviews">Reviews</string>
    <string name="message_no_review">No reviews have been submitted yet</string>
    <string name="message_no_image">Has no image displayed</string>
</resources>