<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/details_banner_image"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_image"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_back_button"
            android:scaleType="centerCrop"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/back"
            app:tint="?attr/colorTertiary" />

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintCircleRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_banner_image">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_movie_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@+id/details_banner_image"
            tools:ignore="SpUsage"
            tools:text="@tools:sample/full_names" />

        <LinearLayout
            android:id="@+id/layout_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/text_movie_name"
            app:layout_constraintStart_toEndOf="@id/image_card" >
            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/text_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                tools:text="9.5"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_length"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:ellipsize="end"
            android:textSize="16sp"
            android:drawablePadding="6dp"
            app:drawableStartCompat="@drawable/ic_time"
            app:layout_constraintTop_toBottomOf="@id/layout_rating"
            app:layout_constraintStart_toEndOf="@id/image_card"
            tools:text="153 minutes" />

        <TextView
            android:id="@+id/text_release_date"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:ellipsize="end"
            android:textSize="16dp"
            android:drawablePadding="6dp"
            app:drawableStartCompat="@drawable/ic_calendar"
            app:layout_constraintTop_toBottomOf="@id/text_length"
            app:layout_constraintStart_toEndOf="@id/image_card"
            tools:text="25 April 2022"
            tools:ignore="SpUsage"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_card"
            app:layout_constraintTop_toBottomOf="@+id/text_release_date" />

        <TextView
            android:id="@+id/heading_overview"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="2dp"
            android:ellipsize="end"
            android:textSize="18dp"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/image_card"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/text_overview"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/heading_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpUsage"
            tools:text="@string/overview"/>

        <TextView
            android:id="@+id/heading_trailer"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="18dp"
            android:text="@string/trailers"
            app:layout_constraintTop_toBottomOf="@id/text_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/heading_trailer"
            tools:listitem="@layout/item_video"/>

        <TextView
            android:id="@+id/heading_cast"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="18dp"
            android:text="@string/cast"
            app:layout_constraintTop_toBottomOf="@id/rv_trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/heading_cast"
            tools:listitem="@layout/item_person"/>

        <TextView
            android:id="@+id/heading_image"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="18dp"
            android:text="@string/images"
            app:layout_constraintTop_toBottomOf="@id/rv_cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/heading_image"
            tools:listitem="@layout/item_image"/>

        <TextView
            android:id="@+id/heading_review"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:textSize="18dp"
            android:text="@string/reviews"
            app:layout_constraintTop_toBottomOf="@id/rv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/heading_review"
            tools:listitem="@layout/item_review"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>